// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with disabled prop 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition: opacity 100ms ease-out;
  transition: opacity 100ms ease-out;
  color: #FFFFFF;
  background-color: #0A169A;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #999999;
  background-color: #D1D1D1;
  opacity: 0.5;
}

.c0:active {
  background-color: #38A9DB;
  box-shadow: 0 0 3px rgba(56,169,219,100);
}

.c0:hover:not(:disabled) {
  background-color: #848ACC;
}

.c0::before {
  content: 'Save';
}

<button
  className="sc-fzozJi sc-fzoLsD sc-fzpans c0"
  disabled={true}
/>
`;

exports[`renders correctly with no props 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition: opacity 100ms ease-out;
  transition: opacity 100ms ease-out;
  color: #FFFFFF;
  background-color: #0A169A;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #999999;
  background-color: #D1D1D1;
  opacity: 0.5;
}

.c0:active {
  background-color: #38A9DB;
  box-shadow: 0 0 3px rgba(56,169,219,100);
}

.c0:hover:not(:disabled) {
  background-color: #848ACC;
}

.c0::before {
  content: 'Save';
}

<button
  className="sc-fzozJi sc-fzoLsD sc-fzpans c0"
/>
`;
